# SIDM

./: CMakeLists.txt  README.md  df2.param
codeSIDM3/: Makefile  StelPert.param  doscatt.c  gravtree.c  init.c
input/: StePer-m3.2e8-c28.4-nostar.out  sm-core-starsIC.txt  sm-core.out  spheric
